--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="scenicPhoto">
 <head>
   <meta charset="UTF-8">
   <title>scenicPhoto</title>
