add image and signup form for home page initial design

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
         href="images/camera.png">
 
   <!-- css -->
+  <link rel="stylesheet" href="./css/main.css">
 
   <!-- bootstrap: cosmo -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
