--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,10 @@
 
   <!-- scripts -->
   <script src="/js/app.js"></script>
-  <script src="/js/controllers.js"></script>
+  <!-- controllers -->
+  <script src="/js/controllers/HomeController.js"></script>
+  <script src="/js/controllers/PhotoController.js"></script>
+  <!-- services -->
   <script src="/js/services.js"></script>
 
   <base href="/">
