separate concerns for services

--- a/client/index.html
+++ b/client/index.html
@@ -20,13 +20,14 @@
   <!-- angular routing -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-route.js"></script>
 
-  <!-- scripts -->
+  <!-- angular app -->
   <script src="/js/app.js"></script>
-  <!-- controllers -->
+  <!-- angular controllers -->
   <script src="/js/controllers/HomeController.js"></script>
   <script src="/js/controllers/PhotoController.js"></script>
-  <!-- services -->
-  <script src="/js/services.js"></script>
+  <!-- angular services -->
+  <script src="/js/services/UserService.js"></script>
+  <script src="/js/services/PhotoService.js"></script>
 
   <base href="/">
 
