--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
   <!-- angular services -->
   <script src="/js/services/UserService.js"></script>
   <script src="/js/services/PhotoService.js"></script>
+  <script src="/js/services/CommentService.js"></script>
 
   <base href="/">
 
