starting the profile page build

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
   <!-- angular controllers -->
   <script src="/js/controllers/HomeController.js"></script>
   <script src="/js/controllers/PhotoController.js"></script>
+  <script src="/js/controllers/ProfileController.js"></script>
   <!-- angular services -->
   <script src="/js/services/UserService.js"></script>
   <script src="/js/services/PhotoService.js"></script>
