define two methods in followService

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
   <script src="/js/services/UserService.js"></script>
   <script src="/js/services/PhotoService.js"></script>
   <script src="/js/services/CommentService.js"></script>
+  <script src="/js/services/FollowService.js"></script>
 
   <base href="/">
 
